<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.IncomeFragment"
    android:id="@+id/fragment_i">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="412dp"
            android:layout_height="132dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.125"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="-1dp">

            <FrameLayout
                android:layout_width="96dp"
                android:layout_height="93dp"
                android:layout_marginEnd="312dp"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="0dp">

                <ImageView
                    android:id="@+id/salary_background"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/circle_background" />

                <ImageView
                    android:id="@+id/salary"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/salary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="96dp"
                android:layout_height="93dp"
                android:layout_marginEnd="210dp"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="0dp">

                <ImageView
                    android:id="@+id/manage_background"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/circle_background" />

                <ImageView
                    android:id="@+id/manage"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/financial_management"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="96dp"
                android:layout_height="93dp"
                android:layout_marginEnd="108dp"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="0dp">

                <ImageView
                    android:id="@+id/part_time_background"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/circle_background" />

                <ImageView
                    android:id="@+id/part_time"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/part_time"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="96dp"
                android:layout_height="93dp"
                android:layout_marginEnd="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="0dp">

                <ImageView
                    android:id="@+id/sideline_background"
                    android:layout_width="80dp"
                    android:layout_height="82dp"
                    android:background="@drawable/circle_background" />

                <ImageView
                    android:id="@+id/sideline"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/sideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="344dp"
                android:layout_marginBottom="13dp"
                android:text="工资"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="243dp"
                android:layout_marginBottom="13dp"
                android:text="理财"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="143dp"
                android:layout_marginBottom="13dp"
                android:text="兼职"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="13dp"
                android:text="副业"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="408dp"
            android:layout_height="68dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.32"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="69dp"
                android:layout_height="68dp"
                android:gravity="center"
                android:text="¥"
                android:textSize="50sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/income_money"
                android:layout_width="338dp"
                android:layout_height="match_parent"
                android:hint="请输入收入金额"
                android:inputType="number"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="405dp"
            android:layout_height="62dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.444"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="2dp">

            <Spinner
                android:id="@+id/income_spinner"
                android:layout_width="157dp"
                android:layout_height="58dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.06"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="3dp" />

            <NumberPicker
                android:id="@+id/income_np_year"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="168dp"
                android:layout_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="0dp" />

            <NumberPicker
                android:id="@+id/income_np_month"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="88dp"
                android:layout_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="-1dp" />

            <NumberPicker
                android:id="@+id/income_np_day"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="0dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="408dp"
            android:layout_height="148dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.669"
            tools:layout_editor_absoluteX="3dp"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="97dp"
                android:layout_height="59dp"
                android:gravity="center"
                android:text="标题:"
                android:textSize="30sp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="-3dp"
                tools:layout_editor_absoluteY="5dp" />

            <TextView
                android:layout_width="97dp"
                android:layout_height="59dp"
                android:layout_marginEnd="316dp"
                android:gravity="center"
                android:text="备注:"
                android:textSize="30sp"
                tools:layout_editor_absoluteX="-3dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/income_title"
                android:layout_width="313dp"
                android:layout_height="65dp"
                android:layout_marginBottom="84dp"
                android:gravity="left|center"
                android:hint="请输入标题"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/income_remark"
                android:layout_width="313dp"
                android:layout_height="65dp"
                android:layout_marginStart="96dp"
                android:layout_marginTop="88dp"
                android:gravity="left|center"
                android:hint="请输入备注"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/income_title"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/income_button"
            android:layout_width="210dp"
            android:layout_height="77dp"
            android:layout_marginBottom="76dp"
            android:backgroundTint="@android:color/black"
            android:text="记一笔"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>