<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_bill"
        android:icon="@drawable/bill"
        android:title="bill" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="Statistics" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_baseline_add_circle_24"
        android:title="@string/add_account" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_baseline_account_balance_wallet_24"
...
