...

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_account_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="美团外卖"
            android:textSize="30sp" />

...
            android:layout_below="@id/text_account_name"
            android:layout_toRightOf="@id/text_account_month"
            android:text="xxm"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/text_account_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginEnd="110dp"
            android:layout_toStartOf="@+id/imagebutton_delete"
            android:text="500"
...
