<resources>
    <string name="app_name">agile7</string>
    <string name="title_home">Home</string>
    <string name="add_account">Add</string>
    <string name="title_notifications">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tab_caption_1_item"> 收入 </string>
    <string name="tab_caption_2_map"> 支出 </string>
...
